--- a/404.md
+++ b/404.md
@@ -7,7 +7,7 @@ share: false
 permalink: /404.html
 ---  
 
-Well... that's not the kind of velocity we meant. Whatever you're looking for, it's not where you thought you left it. Try searching below. 
+Well... that's not the kind of discovery we meant. Whatever you're looking for, it's not where you thought you left it. Try searching below. 
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
